<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="place_guide_text">To Reach %1$s: Take Metro from %2$s and deboard at %3$s</string>
    <string name="thanks">Special Thanks to: Pritam, Reshma for giving us your
        precious time and effort to translate this app. Many Many hearty thanks :)</string>
    <string name="tutorialpage1_text1">Thank You For Choosing Us.</string>
    <string name="tutorialpage1_text2">We offer the following key features in 4 languages.</string>
    <string name="route_info">1. Route Info with color codes and approximate journey time.</string>
    <string name="fare_info">2. Fare Info.</string>
    <string name="line_info">3. a). First-Last Train Info. \n  b). Offline Map</string>
    <string name="nearby_metro_info">4. Find Nearby Metro and places to visit in Delhi</string>
    <string name="language_info">5. We offer English, Hindi, Marathi,Kannada<!-- ,Tamil, Telugu, Malyalam -->.</string>
    <string name="like_info">6. Please rate us on google. Also see our About Section in Settings
        for feedback and suggestions</string>
    <string name="navigate_info">Please go through instructions on next page to use 
        this application key features.</string>
    <string name="page1_text1">Using Station Search Button </string>
    <string name="page1_text2">There are two ways to choose station\n
        a. Either by tapping the button which gives a popup list of stations\n\n
        b. Or Use Search Button to search station by typing the name\n</string>
    <string name="page1_text3">See the image instruction below.</string>
    <string name="page2_text1">Using Language Change Feature</string>
    <string name="page2_text2">Tap \"Language\" Menu Button shows the dialog with \"Language Choice\" which
        can be used to Change the language of whole application.\n</string>
    <string name="page2_text3">        See the image instruction below.</string>
    <string name="page3_text1">Using Share Route Feature</string>
    <string name="page3_text2">Tap \"Show Route\" Button shows the route with \"Share Option\" in action bar,
        which can be used to share the route with our friends or someone in need.\n</string>
    <string name="page3_text3">        See the image instruction below.</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tutorial">Tutorial</string>
    <string name="sde">Source and Destination are Empty</string>
    <string name="sds">Source - Destination are Same</string>
    <string name="cs">Choose Source</string>
    <string name="cd">Choose destination</string>
    <string name="release">release version:</string>
    <string name="developer">Developer</string>
    <string name="dedicated1">This app is dedicated to The Almighty,to our parents,to friends.\nWe have tried our level best to keep the data integrity in accordance with Delhi Metro database.\n For reference we have choosen:</string>
    <string name="dedicated2">For suggestions or feedback mail us at:</string>
    <string name="journey_header">Journey Details:</string>
    <string name="journeyTime">TripTime:%1s</string>
    <string name="noOfStations">Stations:%1s</string>
    <string name="noOfInterchange">InterChange:%1s</string>
    <string name="enter_station_hint">Enter Station name</string>
    <string name="language_menu">Language</string>
    <string name="press_start">Press Start to use Delhi Metro application.</string>
    <string name="welcome">Welcome</string>
    <string name="Start">Tap to Start</string>
    <string name="app_name">Delhi Metro Guide</string>
    <string name="hello_world">Hello world!</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="prepend">Prepend</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="helpheader0">Be a Smart Traveller!</string>
    <string name="helpheader1"><html><b><u>5 Smart reasons to go for a smart Card!!</u></b></html>"\n"</string>
    <string name="helpheader2"><html><b><u>Choose Your Smart Card!!</u></b></html>"\n"</string>
    <string name="helpheader3"><html><b><u>HelpLine Numbers!!</u></b></html>"\n"</string>
    <string name="reference">www.delhimetrorail.com</string>
    <string name="suggestion">techdomain0502@gmail.com</string>
    <string name="version">1.1.20150627</string>
    <string name="programmer">Saurabh, Shobhit, Sachin</string>
    <string name="route_details">Route/Fare Details</string>
    <string name="show_route">Show Route/Fare</string>
    <string name="switch_button">Switch Stations</string>
    <string name="fare_details">Fare Details</string>
    <string name="time_details">First-Last Train Details</string>
    <string name="smartcardFare">Smart Card Fare:Rs 0</string>
    <string name="distance">Distance:%1s</string>
    <string name="fare_rs_0">NormalFare:Rs 0</string>
    <string name="smartnote_fare">*Note: Use smart card to get 10% discount.</string>
    <string name="normalfare">Normal Fare: Rs %1s</string>
    <string name="smartfare">Smart Fare: Rs %1s</string>
    <string name="to">to</string>
    <string name="first_time">First Train:NA</string>
    <string name="last_time">Last Train:NA</string>
    <string name="first_time_code">First Train</string>
    <string name="last_time_code">Last Train</string>
    <string name="choose_source_station">Choose Source Station</string>
    <string name="choose_destination_station">Choose Destination Station</string>
    <string name="fare_label">Fare for Car, Bike and Cycle in Rs.</string>
    <string name="daily_upto_6_hrs">Daily upto 6 Hrs</string>
    <string name="daily_upto_12_hrs">Daily upto 12 Hrs</string>
    <string name="daily_more_than_12_hrs">Daily more than 12 hrs</string>
    <string name="monthly">Monthly</string>
    <string name="fare_625">625</string>
    <string name="daily_night_extra">Daily Night Extra</string>
    <string name="fare_25">25</string>
    <string name="fare_15">15</string>
    <string name="fare_10">10</string>
    <string name="monthly_night_extra">Monthly Night Extra</string>
    <string name="fare_5">5</string>
    <string name="fare_8">8</string>
    <string name="fare_12">12</string>
    <string name="fare_300">300</string>
    <string name="fare_2">2</string>
    <string name="fare_3">3</string>
    <string name="fare_4">4</string>
    <string name="fare_30">30</string>
    <string name="settings">Settings</string>
    <string name="language">Change Language</string>
    <string name="tab_route">Route/Fare</string>
    <string name="tab_fare">Fare</string>
    <string name="tab_lasttrain">Timings</string>
    <string name="source_station">Select Source</string>
    <string name="destination_station">Select Destination</string>
    <string name="last_source_station">Select Line</string>

    <string-array name="nearby_places">
        <item>Choose nearby places type</item>
        <item>Cafe</item>
        <item>Hospitals</item>
        <item>Restaurant</item>
    </string-array>
    <string-array name="menu_settings">
        <item>Metro Help</item>
        <item>Metro Map</item>
        <item>Parking Rates</item>
        <item>About</item>
        <item>Check for Updates</item>
        <item>Like us on Google</item>
    </string-array>
    <string-array name="language_settings">
        <item>English</item>
        <item>हिंदी</item>
        <item>मराठी</item>
		<item >ಕನ್ನಡ</item>
        <!--
        <item>తెలుగు</item>
        <item>tamil</item>
        
       
        <item>malayalam</item>
        -->
    </string-array>

    <string name="langchange">Changing language</string>
    <string name="help">Metro Help</string>
    <string name="about">About</string>
    <string name="map">Map</string>
    <string name="parking">Parking Rates</string>
    <string name="search">Search Station</string>
    <string name="violet">violet</string>
    <string name="indigo">indigo</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="yellow">yellow</string>
    <string name="orange">orange</string>
    <string name="red">red</string>
    <string name="rapid">Rapid Metro Gurgaon</string>
    <string name="grey">grey</string>
    <string name="line">line</string>
    <string name="keliyebadle">Change for</string>
    <string name="junction">(Junction)</string>
    <string name="changehere">Change here</string>
    <string name="general">General</string>
    <string name="metro_help">Metro Help</string>
    <string name="metro_help_sum">A Metro Help Guide</string>
    <string name="metro_map">Metro Map</string>
    <string name="metro_map_sum">An Offline Delhi Metro Map</string>
    <string name="metro_parking">Metro Parking Rates</string>
    <string name="metro_parking_sum">List of General Parking Rates</string>
    <string name="app ">App</string>
    <string name="about_header">About Us</string>
    <string name="about_sum">Let\'s Know each other</string>
    <string name="update_header">Application Update</string>
    <string name="update_sum">Keeps you updated</string>
    <string name="like_header">Google Like</string>
    <string name="like_header_sum">If we deserve please like</string>

</resources>