<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonContainer" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon"
                android:layout_centerHorizontal="true"
                android:padding="18dp"
                android:text="@string/tutorialpage1_text1"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1"
                android:padding="18dp"
                android:text="@string/tutorialpage1_text2"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:padding="18dp"
                android:text="@string/route_info"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text3"
                android:padding="18dp"
                android:text="@string/fare_info"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text4"
                android:padding="18dp"
                android:text="@string/line_info"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/text9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text5"
                android:padding="18dp"
                android:text="@string/nearby_metro_info"
                android:textSize="18dp" />


            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text9"
                android:padding="18dp"
                android:text="@string/language_info"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text6"
                android:padding="18dp"
                android:text="@string/like_info"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/text8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text7"
                android:layout_centerHorizontal="true"
                android:padding="18dp"
                android:text="@string/navigate_info"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text8"
                android:padding="18dp"
                android:text="@string/thanks"
                android:textStyle="bold|italic" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/buttonContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/actionbar_background"
        android:minHeight="48dp" >

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:paddingRight="15dp"
            android:text="@string/next"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>