<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutScreen" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/help"
            android:gravity="center" >
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:padding="5dp"
            android:text="@string/dedicated1"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/reference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:padding="5dp"
            android:text="@string/reference"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:padding="5dp"
            android:text="@string/dedicated2"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="italic"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:padding="5dp"
            android:text="@string/suggestion"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:padding="5dp"
            android:text="@string/release"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="italic"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:padding="5dp"
            android:text="@string/version"
            android:textColor="@android:color/black"
            android:textSize="26dp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:padding="5dp"
            android:text="@string/developer"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="italic"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:padding="5dp"
            android:text="techie"
            android:textColor="@android:color/black"
            android:textSize="26dp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
     
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thanks"
             android:padding="5dp"
             android:textStyle="bold|italic"
            />
        
  
    </LinearLayout>

</ScrollView>