<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/headerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/journey_detail_background">

        <TextView
            android:id="@+id/details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/journey_header"
            android:textSize="@dimen/journeydetail_textSize"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/station_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details">

            <TextView
                android:id="@+id/station"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/noOfStations"
                android:textSize="@dimen/fare_textSize"
                android:textStyle="bold"
                android:visibility="visible" />


            <TextView
                android:id="@+id/interchange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/noOfInterchange"
                android:textSize="@dimen/fare_textSize"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/farecontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/station_container">

            <TextView
                android:id="@+id/fare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/normalfare"
                android:textSize="@dimen/fare_textSize"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/smartfare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/smartfare"
                android:textSize="@dimen/fare_textSize"
                android:textStyle="bold"
                android:visibility="visible" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/timecontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/farecontainer">


            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/journeyTime"
                android:textSize="@dimen/fare_textSize"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/distance"
                android:textSize="@dimen/fare_textSize"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>


    <FrameLayout
        android:layout_marginTop="2dp"
        android:background="@drawable/journey_detail_background"
        android:id="@+id/sideContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         />

</LinearLayout>