<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/header_marginTop"
            android:gravity="center_horizontal"
            android:padding="@dimen/fare_view_padding"
            android:text="@string/fare_details"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/route_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginTop="@dimen/header_marginTop" >

            <include
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/route_layout" />
        </RelativeLayout>

        <TextView
            android:id="@+id/note"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/route_container"
            android:layout_marginTop="@dimen/header_marginTop"
            android:gravity="center_horizontal"
            android:padding="@dimen/fare_view_padding"
            android:text="@string/smartnote_fare"
            android:textSize="@dimen/note"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/fare"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/note"
            android:gravity="center_horizontal"
            android:padding="@dimen/fare_view_padding"
            android:text="@string/fare_rs_0"
            android:textSize="@dimen/fare_textSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/smartfare"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fare"
            android:gravity="center_horizontal"
            android:padding="@dimen/fare_view_padding"
            android:text="@string/smartcardFare"
            android:textSize="@dimen/fare_textSize"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>