<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonContainer" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="18dp"
                android:text="@string/page1_text1"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1"
                android:padding="18dp"
                android:text="@string/page1_text2"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:padding="18dp"
                android:text="@string/page1_text3"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/first"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text3"
                android:padding="0dp"
                android:src="@drawable/firstpage_topimage" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first"
                android:paddingTop="0dp" >

                <ImageView
                    android:id="@+id/second"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/first"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/firstpage_marker1" />

                <ImageView
                    android:id="@+id/third"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/first"
                    android:layout_toRightOf="@+id/second"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/firstpage_marker2" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/buttonContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/actionbar_background"
        android:minHeight="48dp" >

        <Button
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:paddingLeft="15dp"
            android:text="@string/previous"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:paddingRight="15dp"
            android:text="@string/next"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>